RESOLVED FIXED255493
[macOS] Scrolling with a physical mouse wheel should not always animate to the closest snap point
https://bugs.webkit.org/show_bug.cgi?id=255493
Summary [macOS] Scrolling with a physical mouse wheel should not always animate to th...
Wenson Hsieh
Reported 2023-04-15 16:16:31 PDT
Attachments
Wenson Hsieh
Comment 1 2023-04-15 21:08:45 PDT
EWS
Comment 2 2023-04-18 07:47:00 PDT
Committed 263071@main (939e8d49f5a5): <https://commits.webkit.org/263071@main> Reviewed commits have been landed. Closing PR #12777 and removing active labels.
Brent Fulgham
Comment 3 2023-05-03 12:29:50 PDT
This fix is available in macOS Ventura 13.4 beta 4 (22F5059b ) and iOS 16.5 beta 4 (20F5059a).
Note You need to log in before you can comment on or make changes to this bug.